--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseURL = "https://twandalf.github.io/"
+baseURL = "https://antoinecomer.github.io/"
 languageCode = "en-US"
 title = "Simon Le Ma"
 theme = "hugo-split-theme"
